# cameracapture

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  maven-settings.xml  pom.xml
.ci/jenkins/: Jenkinsfile-build  Jenkinsfile-target
.github/workflows/: build.yml  release.yml
src/main/c/: cameracapture.h
src/main/c/darwin/: capture.h  capture.m
src/main/c/linux/: capture.c
src/main/c/windows/: capture.cpp
src/main/java/: module-info.java
src/main/java/com/gluonhq/cameracapture/: CameraCapture.java  Frame.java
src/main/java/com/gluonhq/cameracapture/callback/: InnerFrameCallback.java
src/main/java/com/lodgon/cameracapture/: CameraCapture.java  Frame.java
src/main/java/com/lodgon/cameracapture/callback/: InnerFrameCallback.java
